Alteração do name dentro do arquivo package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "API-RESTful-de-Vendas-com-Node.js",
+  "name": "apinodejs",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/RodrigoErico/API-RESTful-de-Vendas-com-Node.js.git",
