--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "repository": "https://github.com/RodrigoErico/API-RESTful-de-Vendas-com-Node.js.git",
   "author": "RodrigoErico <rodrigoerico25@gmail.com>",
   "license": "MIT",
+  "scripts": {
+  "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts"
+},
   "devDependencies": {
     "@types/node": "^16.7.1",
     "ts-node-dev": "^1.1.8",
