--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "author": "RodrigoErico <rodrigoerico25@gmail.com>",
   "license": "MIT",
   "scripts": {
-  "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts"
-},
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts"
+  },
   "devDependencies": {
     "@types/node": "^16.7.1",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
+    "eslint": "^7.32.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
   }
