--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "RodrigoErico <rodrigoerico25@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts"
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
+    "lint": "eslint . --ext .ts"
   },
   "devDependencies": {
     "@types/node": "^16.7.1",
