--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint-fix": "eslint . --ext .ts --fix"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
     "@types/node": "^16.7.1",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
