--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "RodrigoErico <rodrigoerico25@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts",
+    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/http/server.ts",
     "lint": "eslint . --ext .ts",
     "lint-fix": "eslint . --ext .ts --fix"
   },
@@ -21,6 +21,7 @@
     "eslint-plugin-prettier": "3.2.0",
     "prettier": "^2.3.2",
     "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^3.11.0",
     "typescript": "^4.3.5"
   },
   "dependencies": {
