--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,17 @@
     "plugin:prettier/recommended"
   ],
   "rules": {
-    "no-console": "warn",
-    "prettier/prettier": "error"
-  }
+    "no-console": "off",
+    "no-restricted-syntax": [
+      "error",
+      {
+        "selector": "CallExpression[callee.object.name='console'][callee.property.name!=/^(log|warn|error|info|trace)$/]",
+        "message": "Unexpected property on console object was called"
+      }
+    ]
+  },
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "error"
+    ]
 }
